src/test/deca/syntax/invalid/comparaison.deca
// Description:
//    Test de reconnaisance des tocken de comparaison
//
// Resultats:
//    Erreur du lexer ligne 11
//
// Historique:
//    Cree le 13/01/2024

== < <= >= > || &&
